--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-html, body {
-    margin: 0;
-    height: 100%;
-    overflow: hidden;
-}
-
 .scroll-container {
     height: 100vh;
     overflow-y: scroll;
@@ -16,6 +10,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0; /* Entfernt Abstände zwischen den Sektionen */
 }
 
 img {
