--- a/style.css
+++ b/style.css
@@ -1,9 +1,27 @@
+html, body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+.scroll-container {
+    height: 100vh;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
+}
+
 .scroll-section {
     height: 100vh;
     scroll-snap-align: start;
     display: none; /* Standardmäßig ausblenden */
     justify-content: center;
     align-items: center;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100vh;
+    object-fit: contain;
 }
 
 @media screen and (orientation: portrait) {
