--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    display: flex; /* Standardmäßig anzeigen */
+    display: none; /* Standardmäßig ausblenden */
 }
 
 img {
@@ -25,14 +25,14 @@ img {
     object-fit: contain;
 }
 
-@media screen and (orientation: portrait) {
-    .quer {
-        display: none; /* Querformatbilder ausblenden */
+@media screen and (max-aspect-ratio: 1/1) {
+    .hochkant {
+        display: flex; /* Hochformatbilder anzeigen */
     }
 }
 
-@media screen and (orientation: landscape) {
-    .hochkant {
-        display: none; /* Hochformatbilder ausblenden */
+@media screen and (min-aspect-ratio: 1/1) {
+    .quer {
+        display: flex; /* Querformatbilder anzeigen */
     }
 }
