--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    display: none; /* Standardmäßig ausblenden */
+    display: flex; /* Standardmäßig anzeigen */
 }
 
 img {
@@ -26,13 +26,13 @@ img {
 }
 
 @media screen and (orientation: portrait) {
-    .hochkant {
-        display: flex; /* Hochformatbilder anzeigen */
+    .quer {
+        display: none; /* Querformatbilder ausblenden */
     }
 }
 
 @media screen and (orientation: landscape) {
-    .quer {
-        display: flex; /* Querformatbilder anzeigen */
+    .hochkant {
+        display: none; /* Hochformatbilder ausblenden */
     }
 }
