--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html, body {
     scroll-snap-align: start;
     justify-content: center;
     align-items: center;
-    display: flex;
+    display: none; /* Standardmäßig ausblenden */
     flex-direction: column;
 }
 
@@ -26,13 +26,13 @@ img {
 }
 
 @media screen and (orientation: portrait) {
-    .quer {
-        display: none; /* Querformatbilder ausblenden */
+    .hochkant {
+        display: flex; /* Hochformatbilder anzeigen */
     }
 }
 
 @media screen and (orientation: landscape) {
-    .hochkant {
-        display: none; /* Hochformatbilder ausblenden */
+    .quer {
+        display: flex; /* Querformatbilder anzeigen */
     }
 }
