--- a/style.css
+++ b/style.css
@@ -6,17 +6,16 @@ html, body {
 
 .scroll-container {
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     scroll-snap-type: y mandatory;
 }
 
 .scroll-section {
     height: 100vh;
     scroll-snap-align: start;
+    display: none; /* Standardmäßig ausblenden */
     justify-content: center;
     align-items: center;
-    display: none; /* Standardmäßig ausblenden */
-    flex-direction: column;
 }
 
 img {
