--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 
 .scroll-container {
     height: 100vh;
-    overflow-y: auto;
+    overflow-y: scroll;
     scroll-snap-type: y mandatory;
 }
 
@@ -15,24 +15,24 @@ html, body {
     scroll-snap-align: start;
     justify-content: center;
     align-items: center;
-    display: flex; /* Standardmäßig anzeigen */
+    display: flex;
     flex-direction: column;
 }
 
 img {
-    max-width: 100%;
-    max-height: 100vh;
+    width: 100%;
+    height: auto; /* Passt die Höhe proportional an */
     object-fit: contain;
 }
 
 @media screen and (orientation: portrait) {
     .quer {
-        display: none; / Querformatbilder ausblenden /
+        display: none; /* Querformatbilder ausblenden */
     }
 }
 
 @media screen and (orientation: landscape) {
     .hochkant {
-        display: none; / Hochformatbilder ausblenden */
+        display: none; /* Hochformatbilder ausblenden */
     }
 }
