--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ html, body {
     margin: 0;
     height: 100%;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .scroll-container {
@@ -13,15 +16,14 @@ html, body {
 .scroll-section {
     height: 100vh;
     scroll-snap-align: start;
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
-    flex-direction: column;
 }
 
 img {
-    width: 100%;
-    height: auto; /* Passt die Höhe proportional an */
+    max-width: 100%;
+    max-height: 100vh;
     object-fit: contain;
 }
 
