--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html, body {
     height: 100vh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+      -webkit-overflow-scrolling: touch;
 }
 
 .scroll-section {
