--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ img {
     max-width: 100%;
     max-height: 100vh;
     object-fit: contain;
+     width: auto;
+    height: auto; 
 }
 
 @media screen and (orientation: portrait) {
