--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*Styling*/
+@font-face {
+    font-family: Lilita;
+    src: url('./fonts/LilitaOne-Regular.ttf');
+}
+
 html, body {
     margin: 0;
     height: 100%;
@@ -18,7 +24,7 @@ html, body {
     align-items: center;
 }
 
-img {
+.image-site {
     max-width: 100%;
     max-height: 100vh;
     object-fit: contain;
@@ -26,72 +32,24 @@ img {
     height: auto; 
 }
 
-@media screen and (orientation: portrait) {
-    .quer {
-        display: none; /* Querformatbilder ausblenden */
-    }
+.image-arrow {
+    max-width: 100%;
+    max-height: 100vh;
 }
 
-@media screen and (orientation: landscape) {
-    .hochkant {
-        display: none; /* Hochformatbilder ausblenden */
-    }
+.image-arrow-mobile {
+    max-width: 100%;
+    max-height: 100vh;
 }
+
 
 .arrow {
-    overflow: visible;
-    display: block;
     position: absolute;
-    width: 250px;
-    left: calc(50% - 125px);
+    width: 15%;
+    height: 9%;
     top: 81%;
-    max-width: 250px;
-    max-height: 100vh;
-    animation: float 1500ms ease-in-out infinite;
-}
-
-.hochkant .arrow {
-    overflow: visible;
-    display: block;
-    position: absolute;
-    width: 140px;
-    left: calc(50% - 70px);
-    top: 89%;
-    max-width: 250px;
-    max-height: 100vh;
-    animation: float 1500ms ease-in-out infinite;
-}
-
-@keyframes float {
-    0% {
-        transform: translatey(0px);
-    }
-    50% {
-        transform: translatey(+10px);
-    }
-    100% {
-        transform: translatey(0px);
-    }
-}
-
-
-@keyframes progress {
-    0% {
-        width: calc(13%);
-    }
-    100% {
-        width: calc(13% + 0.4% * 100);
-    }
-}
-
-/*Zeile 91 die Zahl nach der Multiplikation ist die Prozentzahl*/
-@keyframes progress-mobile {
-    0% {
-        width: calc(13%);
-    }
-    100% {
-        width: calc(13% + 0.52% * 90)
-    }
+    left: 42.5%;
+    animation: float 3000ms infinite;
 }
 
 .container {
@@ -104,7 +62,7 @@ img {
 .images {
     position: relative;
     height: 100%;
-    width: 100vh;
+    width: 100vw;
 }
 
 .images-progress {
@@ -125,12 +83,11 @@ img {
     fill: black;
 }
 
-/*Zeile 136 die Zahl nach der Multiplikation ist die Prozentzahl*/
 .progress-mobile {
     font-family: Lilita, serif;
     position: absolute;
     background-color: #725dcf;
-    width: calc(13% + 0.52% * 90);
+    width: calc(13% + 0.52% * 90); /*Prozentsatz (Letzte Zahl) setzen*/
     height: 9.7%;
     top: 54%;
     left: 22%;
@@ -148,12 +105,11 @@ img {
     animation: float 3000ms infinite;
 }
 
-/*Zeile 150 die Zahl nach der Multiplikation ist die Prozentzahl*/
 .progress {
     font-family: Lilita, serif;
     position: absolute;
     background-color: #725dcf;
-    width: calc(13% + 0.4% * 90);
+    width: calc(13% + 0.4% * 90); /*Prozentsatz (Letzte Zahl) setzen*/
     height: 24%;
     top: 35%;
     left: 37%;
@@ -162,7 +118,47 @@ img {
     animation: progress 3000ms ease-in-out;
 }
 
-@font-face {
-    font-family: Lilita;
-    src: url('./fonts/LilitaOne-Regular.ttf');
+/*Animationen*/
+@keyframes float {
+    0% {
+        transform: translatey(0px);
+    }
+    50% {
+        transform: translatey(+10px);
+    }
+    100% {
+        transform: translatey(0px);
+    }
+}
+
+@keyframes progress {
+    0% {
+        width: calc(13%);
+    }
+    100% {
+        width: calc(13% + 0.4% * 90); /*Prozentsatz (Letzte Zahl) setzen*/
+    }
+}
+
+@keyframes progress-mobile {
+    0% {
+        width: calc(13%);
+    }
+    100% {
+        width: calc(13% + 0.52% * 90) /*Prozentsatz (Letzte Zahl) setzen*/
+    }
+}
+
+
+/*Mobile switch*/
+@media screen and (orientation: portrait) {
+    .quer {
+        display: none; /* Querformatbilder ausblenden */
+    }
+}
+
+@media screen and (orientation: landscape) {
+    .hochkant {
+        display: none; /* Hochformatbilder ausblenden */
+    }
 }
